--- a/app/src/main/res/drawable/splash_screen.xml
+++ b/app/src/main/res/drawable/splash_screen.xml
@@ -3,6 +3,6 @@
     <item
         android:drawable="?attr/colorPrimary"/>
     <item
-        android:drawable="@drawable/ic_launcher_foreground"
+        android:drawable="@drawable/ic_launcher"
         android:gravity="center"/>
 </layer-list>
