--- a/app/src/main/res/layout/place_holder_repo.xml
+++ b/app/src/main/res/layout/place_holder_repo.xml
@@ -8,7 +8,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="@dimen/placeholderTextHeight"
-        android:layout_marginEnd="80dp"
+        android:layout_margin="@dimen/default_margin"
         android:background="@color/gray_light"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
